Name:                cryptocipher
Version:             0.3.0
Description:         Symmetrical Block, Stream and PubKey Ciphers
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Symmetrical Block, Stream and PubKey Ciphers
Category:            Cryptography
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-cryptocipher
Cabal-Version:       >=1.8

Flag benchmark
  Description:       Build benchmarks
  Default:           False

Library
  Build-Depends:     base >= 4 && < 5
                   , bytestring
                   , vector >= 0.7
                   , ghc-prim
                   , primitive
                   , crypto-api >= 0.5
                   , crypto-pubkey-types
                   , tagged
                   , cereal
  Exposed-modules:   Crypto.Cipher.RC4
                     Crypto.Cipher.AES
                     Crypto.Cipher.AES.Haskell
                     Crypto.Cipher.Camellia
                     Crypto.Cipher.RSA
                     Crypto.Cipher.DSA
                     Crypto.Cipher.DH
  other-modules:     Number.ModArithmetic
                     Number.Serialize
                     Number.Generate
                     Number.Basic
                     Number.Polynomial
                     Number.Prime
                     System.Endian
  ghc-options:       -Wall
  if arch(ppc) || arch(sparc)
    cpp-options: -DBIG_ENDIAN
  else
    cpp-options: -DLITTLE_ENDIAN

Test-Suite test-cryptocipher
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-Is:           tests.hs
  Build-depends:     base >= 4 && < 5
                   , crypto-api >= 0.5
                   , cryptocipher
                   , bytestring
                   , cryptohash
                   , vector
                   , entropy
                   , QuickCheck >= 2
                   , test-framework >= 0.3.3 && < 0.6
                   , test-framework-quickcheck2 >= 0.2.9 && < 0.3

Executable           Benchmarks
  Main-Is:           Benchmarks.hs
  if flag(benchmark)
    Buildable:       True
    Build-depends:   base >= 4 && < 5
                   , criterion
                   , mtl
  else
    Buildable:       False
  if arch(ppc) || arch(sparc)
    cpp-options: -DBIG_ENDIAN
  else
    cpp-options: -DLITTLE_ENDIAN

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-cryptocipher
