Name:                cryptocipher
Version:             0.4.0
Description:         Symmetrical block and stream ciphers.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Symmetrical block and stream ciphers.
Category:            Cryptography
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-cryptocipher
Cabal-Version:       >=1.8
Extra-Source-Files:  Tests/*.hs
                     cbits/aes/aes.h

Flag benchmark
  Description:       Build benchmarks
  Default:           False

Library
  Build-Depends:     base >= 4 && < 5
                   , bytestring
                   , vector >= 0.7
                   , cpu >= 0.1 && < 0.2
                   , ghc-prim
                   , primitive
                   , cipher-aes
                   , cipher-rc4
                   , crypto-api >= 0.5
                   , crypto-pubkey-types >= 0.2 && < 0.3
                   , tagged
                   , cereal
  Exposed-modules:   Crypto.Cipher.RC4
                     Crypto.Cipher.AES
                     Crypto.Cipher.Blowfish
                     Crypto.Cipher.Camellia
                     Crypto.Cipher.RSA
                     Crypto.Cipher.DSA
                     Crypto.Cipher.DH
  other-modules:     Number.ModArithmetic
                     Number.Serialize
                     Number.Generate
                     Number.Basic
                     Number.Polynomial
                     Number.Prime
                     Crypto.Cipher.ElGamal
  ghc-options:       -Wall

Test-Suite test-cryptocipher
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-Is:           tests.hs
  Build-depends:     base >= 4 && < 5
                   , crypto-api >= 0.5
                   , cryptocipher
                   , bytestring
                   , cryptohash
                   , vector
                   , entropy
                   , QuickCheck >= 2
                   , test-framework >= 0.3.3
                   , test-framework-quickcheck2 >= 0.2.9

Executable           Benchmarks
  hs-source-dirs:    Benchmarks
  Main-Is:           Benchmarks.hs
  if flag(benchmark)
    Buildable:       True
    Build-depends:   base >= 4 && < 5
                   , bytestring
                   , crypto-api
                   , cryptocipher
                   , criterion
                   , mtl
  else
    Buildable:       False

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-cryptocipher
