Name:                crypto-cipher-benchmarks
Version:             0.0.3
Synopsis:            Generic cryptography cipher benchmarks
Description:         Generic cryptography cipher benchmarks
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8

Library
  Exposed-modules:   Crypto.Cipher.Benchmarks
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , byteable >= 0.1.1
                   , securemem >= 0.1.1
                   , criterion
                   , crypto-cipher-types >= 0.0.5
                   , mtl
                   , pretty
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir: benchs
