Name:                cipher-blowfish
Version:             0.0.3
Description:         Blowfish cipher primitives
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Blowfish cipher
Category:            Cryptography
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8

Library
  Build-Depends:     base >= 4 && < 5
                   , bytestring
                   , byteable
                   , vector
                   , securemem >= 0.1.2
                   , crypto-cipher-types >= 0.0.3 && < 0.1
  Exposed-modules:   Crypto.Cipher.Blowfish
  Other-modules:     Crypto.Cipher.Blowfish.Primitive
  ghc-options:       -Wall -optc-O3 -fno-cse -fwarn-tabs

Test-Suite test-cipher-blowfish
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-Is:           Tests.hs
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , QuickCheck >= 2
                   , test-framework >= 0.3.3
                   , test-framework-quickcheck2 >= 0.2.9
                   , byteable
                   , crypto-cipher-types >= 0.0.3
                   , crypto-cipher-tests
                   , cipher-blowfish

Benchmark bench-cipher-blowfish
  hs-source-dirs:    Benchmarks
  Main-Is:           Benchmarks.hs
  type:              exitcode-stdio-1.0
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , criterion
                   , mtl
                   , crypto-cipher-types
                   , crypto-cipher-benchmarks
                   , cipher-blowfish

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir:   cipher-blowfish
