Name:                cipher-camellia
Version:             0.0.1
Description:         Camellia block cipher primitives
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Camellia block cipher primitives
Category:            Cryptography
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8

Library
  Build-Depends:     base >= 4 && < 5
                   , bytestring
                   , byteable
                   , crypto-cipher-types >= 0.0.3
                   , securemem >= 0.1.2
                   , vector
  Exposed-modules:   Crypto.Cipher.Camellia
  Other-modules:     Crypto.Cipher.Camellia.Primitive
  ghc-options:       -Wall -fwarn-tabs

Test-Suite test-cipher-camellia
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-Is:           Tests.hs
  Build-depends:     base >= 4 && < 5
                   , cipher-camellia
                   , crypto-cipher-types
                   , crypto-cipher-tests
                   , bytestring
                   , byteable
                   , QuickCheck >= 2
                   , test-framework >= 0.3.3
                   , test-framework-quickcheck2 >= 0.2.9

Benchmark bench-cipher-camellia
  hs-source-dirs:    Benchmarks
  Main-Is:           Benchmarks.hs
  type:              exitcode-stdio-1.0
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , cipher-camellia
                   , crypto-cipher-types
                   , crypto-cipher-benchmarks
                   , criterion
                   , mtl

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir:   cipher-camellia
