Name:                cryptocipher
Version:             0.6.1
Description:         Symmetrical block and stream ciphers.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Symmetrical block and stream ciphers.
Category:            Cryptography
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8

Library
  Build-Depends:     base >= 4 && < 5
                   , crypto-cipher-types
                   , cipher-aes >= 0.2.3
                   , cipher-rc4
                   , cipher-des
                   , cipher-blowfish
                   , cipher-camellia
  Exposed-modules:   Crypto.Cipher
  ghc-options:       -Wall

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir:   cryptocipher
