Name:                cryptocipher
Version:             0.6.2
Description:         Symmetrical block and stream ciphers.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Symmetrical block and stream ciphers.
Category:            Cryptography
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8

Library
  Build-Depends:     base >= 4 && < 5
                   , crypto-cipher-types >= 0.0.8 && < 0.1
                   , cipher-aes >= 0.2.3 && < 0.3
                   , cipher-rc4 >= 0.1.3 && < 0.2
                   , cipher-des >= 0.0 && < 0.1
                   , cipher-blowfish >= 0.0 && < 0.1
                   , cipher-camellia >= 0.0 && < 0.1
  Exposed-modules:   Crypto.Cipher
  ghc-options:       -Wall

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir:   cryptocipher
