Name:                crypto-cipher-tests
Version:             0.0.1
Synopsis:            Generic cryptography cipher tests
Description:         Generic cryptography cipher tests
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8

Library
  Exposed-modules:   Crypto.Cipher.Tests
  Other-modules:     Crypto.Cipher.Tests.KATs
                     Crypto.Cipher.Tests.Properties
  Build-depends:     base >= 3 && < 5
                   , QuickCheck >= 2
                   , mtl
                   , HUnit
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit
                   , bytestring
                   , byteable >= 0.1.1
                   , securemem >= 0.1.1
                   , crypto-cipher-types
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir: tests
