Name:                crypto-cipher-types
Version:             0.0.4
Synopsis:            Generic cryptography cipher types
Description:         Generic cryptography cipher types
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8
data-files:          README.md

Library
  Exposed-modules:   Crypto.Cipher.Types
  Other-modules:     Crypto.Cipher.Types.GF
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , byteable >= 0.1.1
                   , securemem >= 0.1.1
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir: types
