Name:                crypto-cipher-types
Version:             0.0.9
Synopsis:            Generic cryptography cipher types
Description:         Generic cryptography cipher types
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8
data-files:          README.md

Library
  Exposed-modules:   Crypto.Cipher.Types
                   , Crypto.Cipher.Types.Unsafe
  Other-modules:     Crypto.Cipher.Types.GF
                   , Crypto.Cipher.Types.Block
                   , Crypto.Cipher.Types.BlockIO
                   , Crypto.Cipher.Types.Stream
                   , Crypto.Cipher.Types.OfIO
                   , Crypto.Cipher.Types.AEAD
                   , Crypto.Cipher.Types.Base
                   , Crypto.Cipher.Types.Utils
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , byteable >= 0.1.1
                   , securemem >= 0.1.1
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir: types
